Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46299

QTimer::timeout() is never emitted

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.5.0 RC
    • 5.5.0 Beta
    • Core: Event loop
    • None
    • WinRT
    • a42330dc12bf7ee920e5c3c5a230e4fccae727bc

    Description

      I built Qt 5.5.0 from the sources on the site to obtain the fix for UDP socket issue (QTBUG-44051). After building from sources and deploying the app no QTimer::timeout() evens seem to be fired any more. Even the text cursor on a QLineEdit does not blink (I guess it is also triggered by a timer).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owolff Oliver Wolff
            rudolfs.bundulis Rudolfs Bundulis
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes