winrt: Fixed timer handling in case where additional user events occur

When timers are used in connection with widgets, it is possible that
additional events occur (e.g. deferred deletions). If these happen, the
event dispatcher also has to handle timers after handling these events
as timer events might not be handled at all otherwise. So instead of
returning early, we check whether timer events happened and might
return afterwards.

Task-number: QTBUG-46299
Change-Id: I3ef0fb23b3ae9a1e13e42497bcfb0976cf4e1b91
Reviewed-by: Andrew Knight <andrew.knight@intopalo.com>

cregit: a42330dc12bf7ee920e5c3c5a230e4fccae727bc https://github.com/qt/qtbase/commit/a42330dc12bf7ee920e5c3c5a230e4fccae727bc