src/corelib/kernel/qeventdispatcher_winrt.cpp
@@ -925,17 +925,17 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
-comment|// Dispatch accumulated user events
-if|if
-condition|(
+comment|// Additional user events have to be handled before timer events, but the function may not
+comment|// return yet.
+specifier|const
+name|bool
+name|userEventsSent
+init|=
 name|sendPostedEvents
 argument_list|(
 name|flags
 argument_list|)
-condition|)
-return|return
-literal|true
-return|;
+decl_stmt|;
 emit|emit
 name|aboutToBlock
 argument_list|()
@@ -1091,6 +1091,13 @@ emit|emit
 name|awake
 argument_list|()
 emit|;
+if|if
+condition|(
+name|userEventsSent
+condition|)
+return|return
+literal|true
+return|;
 block|}
 do|while
 condition|(
